# altertable-lakehouse-python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/altertable_lakehouse/: __init__.py  client.py  errors.py  models.py
tests/: test_basic.py  test_client.py
